# Musidex

./: .dockerignore  .gitignore  Dockerfile  README.md  backup.sh  docker-compose.yml  prepare.sh  start.sh
.github/workflows/: build-test.yml  test_extension.yml
musidex-browser-extension/: .gitignore  package-lock.json  package.json  readme.md
musidex-browser-extension/release_distribution/: manifest.json  options.25a5d16c.css  options.78898cc4.js  options.html  yt.js
musidex-browser-extension/source/: background.js  manifest.json  options-storage.js  options.css  options.html  options.js  url.js  yt.js
musidex-daemon/: .gitignore  Cargo.toml  serve_local.sh
musidex-daemon/migrations/: 001-init.sql  001-music.sql  001-test.sql  002-mtag-text-index.sql  002-users.sql  003-stats.sql  004-logs.sql  005-full-embeddings.sql  006-user_library-order.sql
musidex-daemon/src/: config.rs  db.rs  handlers.rs  main.rs  migrate.rs  router.rs  utils.rs
musidex-daemon/src/application/: handlers.rs  mod.rs  user_handlers.rs
musidex-daemon/src/domain/: clean.rs  config.rs  entity.rs  handlers.rs  mod.rs  music.rs  source.rs  stream.rs  sync.rs  tags.rs  upload.rs  user.rs  worker_embedding_dimreduce.rs  worker_neural_embed.rs  worker_thumbnail_resize.rs  worker_youtube_dl.rs  youtube_dl_worker.rs
musidex-daemon/src/infrastructure/: db.rs  migrate.rs  mod.rs  router.rs  tls.rs  youtube_dl.rs
musidex-daemon/src/tests/: config.rs  mod.rs  music.rs  sources.rs  tags.rs  user.rs  worker_embedding_dimreduce.rs  worker_neural_embed.rs  worker_thumbnail_resize.rs
musidex-flutter/: pubspec.yaml
musidex-neuralembed/: extractor.py  models.py  neuralembed.py  neuralembedv2.py  requirements.txt  tagger.py
musidex-rn/: .eslintrc.js  .gitignore  App.tsx  app.json  build_android.sh  common  index.js  package-lock.json  package.json  prepare_ios.sh  service.js  watch_common.sh
musidex-rn/__tests__/: App-test.tsx
musidex-rn/android/: build.gradle  settings.gradle
musidex-rn/android/app/: BUCK  _BUCK  build.gradle
musidex-rn/common/: api.ts  entity.ts  filters.ts  tracklist.ts  utils.ts
musidex-rn/components/: Explorer.tsx  Header.tsx  Input.tsx  Player.tsx  ProgressBar.tsx  SearchInput.tsx  Settings.tsx  SmallPlayer.tsx  StyledText.tsx  Thumbnail.tsx
musidex-rn/constants/: Contexts.ts
musidex-rn/domain/: Colors.ts  colors.ts  contexts.ts  ctx.ts  localsettings.ts  positionStorage.ts  sync.ts  trackplayer.ts  useCachedResources.ts  useMetadata.ts  useStored.ts
musidex-rn/hooks/: useStored.ts
musidex-rn/ios/: Podfile
musidex-rn/ios/Musidex/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
musidex-rn/ios/Musidex.xcodeproj/: project.pbxproj
musidex-rn/ios/Musidex.xcworkspace/: contents.xcworkspacedata
musidex-rn/ios/MusidexTests/: MusidexTests.m
musidex-rn/ios/musidexrn/: Info.plist  SplashScreen.storyboard
musidex-rn/ios/musidexrn.xcodeproj/: project.pbxproj
musidex-rn/navigation/: BottomTabNavigator.tsx  LinkingConfiguration.ts  MainScreen.tsx  SettingsScreen.tsx  index.tsx
musidex-rn/screens/: MainScreen.tsx  TabTwoScreen.tsx
musidex-ts-common/: api.ts  entity.ts  filters.ts  tracklist.ts  utils.ts
musidex-web/: README.md  craco.config.js  package-lock.json  package.json  tsconfig.json
musidex-web/public/: index.html  manifest.json
musidex-web/src/: App.tsx  api.ts  common  index.css  index.tsx  setupProxy.js
musidex-web/src/common/: entity.ts  filters.ts
musidex-web/src/components/: explorer.css  explorer.tsx  input.css  input.tsx  navbar.css  navbar.tsx  navigator.tsx  playbutton.tsx  player.css  player.tsx  submit.css  submit.tsx  utils.css  utils.tsx
musidex-web/src/domain/: api.ts  entity.ts  filters.ts  metadata.ts  tracklist.ts  trackplayer.ts
sqitch/: sqitch.plan  sqitch_deploy.sh
tsne-wasm/: Cargo.toml  LICENSE_MIT  README.md
tsne-wasm/src/: lib.rs
tsne-wasm/tests/: web.rs
(+33 files in other folders)
