[package]
name = "musidex-daemon"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@adevinta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.11", features = ["server", "http1", "tcp"] }
env_logger = "0.8"
include_dir = "0.6"
anyhow = "1.0.42"
log = "0.4.14"
rusqlite = "0.25.3"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "fs", "io-util", "macros"]}
test-env-log = "0.2.7"
route-recognizer = "0.3.0"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.16"
tokio-rustls = "0.22.0"
http-range = "0.1.4"
dateparser = "0.1.5"
miniz_oxide = "0.4.4"
regex = "1.5.4"
lazy_static = "1.4.0"
webp = { version = "0.1.3", features=["image"]}
image = { version = "0.23.14", default-features = false, features=["jpeg"] }
hyper-tungstenite = "0.4.0"
basic-cookies = "0.1.4"