[package]
name = "musidex-daemon"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@adevinta.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bundled = ["rusqlite/bundled-full"]

[dependencies]
hyper = { version = "0.14.11", features = ["server", "http1", "tcp"] }
env_logger = "0.10.0"
include_dir = "0.7.3"
anyhow = "1.0.42"
log = "0.4.14"
rusqlite = "0.29.0"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "fs", "io-util", "macros"] }
test-log = "0.2.7"
route-recognizer = "0.3.0"
nanoserde = "0.1.33"
chrono = { version = "0.4.19" }
futures = "0.3.16"
http-range = "0.1.4"
dateparser = "0.2.0"
miniz_oxide = "0.7.1"
regex = "1.5.4"
lazy_static = "1.4.0"
webp = { version = "0.2.5", features = ["image"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg"] }
hyper-tungstenite = "0.11.1"
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
tinyrand = "0.5.0"