[package]
name = "tsne-wasm"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"
description = "Rust powered t-sne through the bhtsne crate compiled to WASM"
repository = "https://github.com/Uriopass/Musidex"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
bhtsne = { version = "0.4.1", default-features=false }
getrandom = { version = "0.2.3", default-features=false, features=["js"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
